--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Video Streaming Demonstration</h1>
-    <img src="/video_feed">
+    <img src="../video_feed">
   </body>
 </html>
